# StartupHotrNot-Hackathon

fastapi/: Dockerfile  README.md  compose.dev.yaml  compose.yaml  main.py  pyproject.toml  requirements.txt
fastapi/templates/: index.html
idea/: modules.xml
src/: App.js  app.json  package-lock.json  package.json
src/navigation/: AppNavigator.js  AuthNavigator.js  StartupAppNavigator.js
src/services/: authService.js
src/utils/: colors.js  styles.js
src/views/Auth/: LoginView.js  StartupRegisterationView.js  UserRegisterationView.js
src/views/Components/: TemplateView.js
src/views/Developer/: ProfileView.js  SwipableStartupView.js  UserProfileOverview.js
src/views/Startup/: StartupHome.js  StartupProfile.js  StartupProfileOverview.js
