[tool.poetry]
name = "hotor"
version = "0.1.0"
description = "Startup Hot Or Not by Volt-9 labs"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.2"
fastapi = {extras = ["all"], version = "^0.114.2"}
uvicorn = "^0.30.6"
pydantic = {extras = ["all"], version = "^2.9.1"}
pymongo = "^4.8.0"
motor = {extras = ["srv"], version = "^3.5.1"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
